--- a/Protfolio/protfolio.html
+++ b/Protfolio/protfolio.html
@@ -13,6 +13,7 @@
         i am student :)
     </p>
     <img src="SUNNYjpg.jpg" alt = "Sunny Chahal" height = "130px" width = "85px">
+    <hr>
     <h3>Education: </h3>
     <ul>
         <li>
@@ -28,6 +29,7 @@
             85%
         </li>
     </ul>
+    <hr>
     <h3>Skills: </h3>
     <ul>
         <li>
@@ -46,6 +48,7 @@
             </b>
         </li>
     </ul>
+    <hr>
     <h3>Contact: </h3>
     <ul>
         <li>
@@ -60,6 +63,18 @@
             </b>
              9536210225
         </li>
+        <li>
+            <b>
+            
+                <a href = "https://www.linkedin.com/in/sunny-chahal-34a860290?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"> linkedin
+                </a>
+            </b>
+
+        </li>
     </ul>
+<footer>
+    This is made by me:) &nbsp; &hearts;
+</footer>
+
 </body>
 </html>
