--- a/Registration/Registration.html
+++ b/Registration/Registration.html
@@ -11,8 +11,8 @@
     </h3>
 <form action = "/server">
     <div>
-        <input type = "text" placeholder = "First Name" id = "First">
-        <input type = "text" placeholder = "Last Name" id = "last">
+        <input type = "text" placeholder = "First Name" id = "First" />
+        <input type = "text" placeholder = "Last Name" id = "last" />
     </div>
     <div>
         Please select your gender
@@ -25,7 +25,7 @@
     </div>
     <div>
         <label for = "agree">Do you agree terms and conditions
-        <input type = "checkbox"  id = "agree" name = "Agree">
+        <input type = "checkbox"  id = "agree" name = "Agree" checked />
         Yes I agree
     </div>
     <div>
