--- a/Table/table.html
+++ b/Table/table.html
@@ -10,7 +10,7 @@
         <caption>
             Food&nbsp;Menu
         </caption>
-     <theader>
+     <thead>
       <tr>
         <th rowspan = "2">
             Item
@@ -23,7 +23,7 @@
         <th>INR</th>
         <th>USD</th>
       </tr>
-     </theader>
+     </thead>
      <tbody>
       <tr>
         <td>
