--- a/Table/table@.html
+++ b/Table/table@.html
@@ -10,7 +10,7 @@
         <caption>
             A test table with merged cells
         </caption>
-     <theader>
+     <thead>
          <tr>
             <td rowspan = "2">
 
@@ -30,7 +30,7 @@
                 Weight
             </td>
         </tr>
-     </theader>
+     </thead>
      <tbody>
         <tr>
             <td>
