--- a/CSS2/Grid/practice.html
+++ b/CSS2/Grid/practice.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id = "outer">
-        <div>1</div>
+        <div id = "first">1</div>
         <div>2</div>
         <div>3</div>
         <div>4</div>
